# ArtHook

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hook.cpp  hookback.c
app/src/main/java/de/larma/arthook/: ArtMethod.java
app/src/main/java/de/larma/arthook/avers/: N.java
app/src/main/java/de/larma/arthook/xposed/: Utils.java
app/src/main/java/me/larma/arthook/: MainActivity.java  MyApplication.java
app/src/main/res/layout/: activity_my.xml
app/src/main/res/values/: strings.xml
doc/: ArtHook Callee-side method hook injection on the new Android runtime ART.docx  chinese.docx
gradle/wrapper/: gradle-wrapper.properties
